<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:appcompat="http://schemas.android.com/tools">

    <item
        android:id="@+id/pop"
        android:title="@string/PopularTVseries" />

    <item
        android:id="@+id/top"
        android:title="@string/TopRatedTVseries" />

    <item
        android:id="@+id/airing_today"
        android:title="@string/AiringTodayTVseries" />
    <item
        android:id="@+id/on_the_air"
        android:title="@string/OnTheAirTVseries" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/fav"
        android:title="@string/FavouriteTVseries" />
    <item
        android:id="@+id/sign_out"
        android:title="@string/sign_out" />


</menu>